--- a/_layouts/writing.html
+++ b/_layouts/writing.html
@@ -13,6 +13,8 @@
 
   </head>
   <body>
+    <script src="/js/jquery.js"></script>
+    <!-- <script src="/js/libs/toc.js"></script> -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -35,18 +37,21 @@
               </div>
             </div>
 
-            <p>{{ page.title }}</p>
+            <div class="toc"></div>
+<!--             <p>{{ page.title }}</p>
             <ul>
             	{% for heading in page.toc %}
 	              <li>{{ heading }}</li>
               {% endfor %}
             </ul>         
-
+ -->
           </div>
         </nav>
  
         <div id="{{ page.id }}" class="content wrap">
           <p><small>{{ page.date }}</small></p>
+
+          <h1>{{ page.title }}</h1>
 
           {{ content }}
 
