--- a/_layouts/writing.html
+++ b/_layouts/writing.html
@@ -1,85 +1,54 @@
-<!DOCTYPE html>
-<html>
-  <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title>{{ page.title }}</title>
-      <meta name="viewport" content="width=device-width">
+---
+layout: base
+---
 
-      <link rel="stylesheet" href="/css/syntax.css">
-      <link rel="stylesheet" href="/css/style.css">
-      <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-      <link href='http://fonts.googleapis.com/css?family=Lato:100,200,300,400' rel='stylesheet' type='text/css'>
+<nav id="toc">
+  <div id="inner-header" class="wrap clearfix">
 
-  </head>
-  <body>
-    <script src="/js/jquery.js"></script>
-    <!-- <script src="/js/libs/toc.js"></script> -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-42527632-1', 'samselikoff.com');
-      ga('send', 'pageview');
-
-    </script>
-    <div class="container">
-      <div class="site">
-
-        <nav id="toc">
-          <div id="inner-header" class="wrap clearfix">
-
-            <div id="header-intro">
-              <div class="byline thin subtitle">
-                <p class="inline"><a href="/writing"><- Back to writing</a></p>
-              </div>
-            </div>
-
-            <div class="toc"></div>
-<!--             <p>{{ page.title }}</p>
-            <ul>
-            	{% for heading in page.toc %}
-	              <li>{{ heading }}</li>
-              {% endfor %}
-            </ul>         
- -->
-          </div>
-        </nav>
- 
-        <div id="{{ page.id }}" class="content wrap">
-          <p><small>{{ page.date }}</small></p>
-
-          <h1>{{ page.title }}</h1>
-
-          {{ content }}
-
-          <div class="comments">
-              <div id="disqus_thread"></div>
-              <script type="text/javascript">
-                  /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-                  var disqus_shortname = 'samselikoff'; // required: replace example with your forum shortname
-
-                  /* * * DON'T EDIT BELOW THIS LINE * * */
-                  (function() {
-                      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                      dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-                  })();
-              </script>
-              <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-              <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-          </div>
-          
-        </div>
-
-
-        <footer>
-          <p class="copyright muted">&copy; 2013 Sam Selikoff</p>
-        </footer>
-
+    <div id="header-intro">
+      <div class="byline thin subtitle">
+        <p class="inline"><a href="/writing"><i class="fa fa-chevron-left"></i> Back to writing</a></p>
       </div>
-    </div> <!-- /container -->
-  </body>
-</html>
+    </div>
+
+    <div class="toc"></div>
+<!--             <p>{{ page.title }}</p>
+    <ul>
+    	{% for heading in page.toc %}
+        <li>{{ heading }}</li>
+      {% endfor %}
+    </ul>         
+-->
+  </div>
+</nav>
+
+<div id="{{ page.id }}" class="content wrap">
+  <p><small>{{ page.date }}</small></p>
+
+  <h1>{{ page.title }}</h1>
+
+  {{ content }}
+
+  <div class="comments">
+      <div id="disqus_thread"></div>
+      <script type="text/javascript">
+          /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+          var disqus_shortname = 'samselikoff'; // required: replace example with your forum shortname
+
+          /* * * DON'T EDIT BELOW THIS LINE * * */
+          (function() {
+              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+              dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+          })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+      <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+  </div>
+  
+</div>
+
+
+<footer>
+  <p class="copyright muted">&copy; 2013 Sam Selikoff</p>
+</footer>
