--- a/_sass/print.scss
+++ b/_sass/print.scss
@@ -1,16 +1,4 @@
-/******************************************************************
-Site Name:
-Author:
-
-Stylesheet: Print Stylesheet
-
-This is the print stylesheet. There's probably not a lot
-of reasons to edit this stylesheet. If you want to
-though, go for it.
-
-******************************************************************/
-
-
+@media print {
 
   * {
     background: transparent !important;
@@ -58,25 +46,31 @@ though, go for it.
     max-width: 100% !important;
   }
 
-    @page {
-      margin: 0.5cm;
-    }
+  @page {
+    margin: 0.5cm;
+  }
 
-    p, h2, h3 {
-      orphans: 3;
-      widows: 3;
-    }
+  p, h2, h3 {
+    orphans: 3;
+    widows: 3;
+  }
 
-    h2,
-    h3 {
-      page-break-after: avoid;
-    }
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
 
-    // hide content people who print don't need to see
-    .sidebar,
-    .page-navigation,
-    .wp-prev-next,
-    .respond-form,
-    nav {
-      display: none;
-    }
+  // hide content people who print don't need to see
+  .sidebar,
+  .page-navigation,
+  .wp-prev-next,
+  .respond-form,
+  nav {
+    display: none;
+  }
+
+  #disqus_thread {
+    display: none;
+  }
+
+}
