--- a/_layouts/writing.html
+++ b/_layouts/writing.html
@@ -2,53 +2,59 @@
 layout: base
 ---
 
-<nav id="toc">
-  <div id="inner-header" class="wrap clearfix">
-
-    <div id="header-intro">
-      <div class="byline thin subtitle">
-        <p class="inline"><a href="/writing"><i class="fa fa-chevron-left"></i> Back to writing</a></p>
-      </div>
-    </div>
-
-    <div class="toc"></div>
-<!--             <p>{{ page.title }}</p>
-    <ul>
-    	{% for heading in page.toc %}
-        <li>{{ heading }}</li>
-      {% endfor %}
-    </ul>         
--->
-  </div>
-</nav>
-
-<div id="{{ page.id }}" class="content wrap">
-  <p><small>{{ page.date }}</small></p>
-
-  <h1>{{ page.title }}</h1>
-
-  {{ content }}
-
-  <div class="comments">
-      <div id="disqus_thread"></div>
-      <script type="text/javascript">
-          /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-          var disqus_shortname = 'samselikoff'; // required: replace example with your forum shortname
-
-          /* * * DON'T EDIT BELOW THIS LINE * * */
-          (function() {
-              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-              dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-          })();
-      </script>
-      <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-      <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-  </div>
+<div id="writing">
   
-</div>
+  <nav id="toc">
+    <div id="inner-header" class="wrap clearfix">
+
+      <div class="back">
+        <a class="thin" href="/writing">
+          <i class="fa fa-chevron-left"></i> Back to writing
+        </a>
+      </div>
+
+      <div class="toc"></div>
+  <!--             <p>{{ page.title }}</p>
+      <ul>
+      	{% for heading in page.toc %}
+          <li>{{ heading }}</li>
+        {% endfor %}
+      </ul>         
+  -->
+    </div>
+  </nav>
+
+  <div id="{{ page.id }}" class="content wrap">
+    <p><small class="soft">{{ page.date }}</small></p>
+
+    <h1>{{ page.title }}
+      <span class="subtitle thin">{{ page.subtitle }}</span>
+    </h1>
+
+    {{ content }}
+
+    <div class="comments">
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = 'samselikoff'; // required: replace example with your forum shortname
+
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    </div>
+    
+  </div>
 
 
-<footer>
-  <p class="copyright muted">&copy; 2013 Sam Selikoff</p>
+  <footer>
+    <p class="copyright muted">&copy; 2013 Sam Selikoff</p>
 </footer>
+
+</div>
