--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,13 +7,13 @@
 body {
   font-family: $sans-serif;
   font-size: 16px;
-  line-height: 28px;
+  line-height: 1.5em;
   color: #333;
   background-color: $background-primary;
 }
 
 small {
-  font-size: 0.9em;
+  font-size: small;
 }
 
 hr {
@@ -61,10 +61,12 @@ iframe {
 
 a, a:visited {
   color: $link-color;
+  text-decoration: none;
 
   /* on hover */
   &:hover, &:focus {
     color: $link-hover;
+    text-decoration: underline;
   }
 
   /* on click */
