--- a/_sass/modules/_writing.scss
+++ b/_sass/modules/_writing.scss
@@ -1,7 +1,34 @@
 #writing {
-  ul {
-    list-style-type: none;
-    margin-left: 0;
-    padding-left: 0;
+  .back {
+    display: block;
+    margin-top: 1em;
+
+    a:hover {
+      text-decoration: none;
+    }
+    i {
+      font-size: 0.9em;
+      padding-right: 0.3em;
+    }
   }
+
+  ul {
+    // list-style-type: none;
+    // margin-left: 0;
+    // padding-left: 0;
+  }
+
+  .content {
+    margin-top: 0;
+  }
+
+  h1 {
+    margin-top: .1em;
+    margin-bottom: 0;
+
+    .subtitle {
+      display: block;
+    }
+  }
+
 }
