--- a/_sass/tools/_utility.scss
+++ b/_sass/tools/_utility.scss
@@ -2,6 +2,10 @@
   color: #999;
 }
 
+.soft {
+  color: #666;
+}
+
 .no-bottom-margin {
   margin-bottom: 0;
 }
@@ -44,7 +48,7 @@
 .thin {
   font-weight: 300;
   font-family: 'Raleway', 'Lato', sans-serif;
-  color: #999;
+  // color: #999;
   // font-size: 20px;
   // line-height: 26px;
 }
