Updating styling, tutorials

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,9 +7,9 @@
       <meta name="viewport" content="width=device-width">
 
       <!-- CSS -->
-      <link rel="stylesheet" href="/css/syntax.css">
       <link rel="stylesheet" href="/css/style.css">
       <link rel="stylesheet" href="/css/print.css">
+      <link href='http://fonts.googleapis.com/css?family=Italianno' rel='stylesheet' type='text/css'>
 
       <!-- Fonts -->
       <link href='http://fonts.googleapis.com/css?family=Lato:100,200,300,400' rel='stylesheet' type='text/css'>
@@ -33,12 +33,8 @@
       ga('send', 'pageview');
 
     </script>
-    <div class="container">
-      <div class="site">
         
-        {{ content }}
+    {{ content }}
 
-      </div>
-    </div>
   </body>
 </html>
