--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,15 @@
 ---
-layout: default
+layout: article
+site-section: blog
 ---
 
+{{ content }}
+
+<!-- ---
+layout: writing
+---
+
+{{ content }}
 <div id="post" class="reading">
 	<article>
 		<header class="page-header">
@@ -32,3 +40,4 @@ layout: default
 		</div>
 	</article>
 </div>
+ -->
