--- a/_sass/modules/_blog.scss
+++ b/_sass/modules/_blog.scss
@@ -15,6 +15,15 @@
     .keep-reading {
       text-decoration: none;
     }
+
+  }
+
+  article {
+    ul {
+      list-style-type: disc;
+      margin-left: 1em;
+      padding-left: 1em;
+    }
   }
 
   .previous {float: left}
