--- a/_sass/modules/_page-header.scss
+++ b/_sass/modules/_page-header.scss
@@ -3,10 +3,11 @@
   margin-bottom: 30px;
 
   .title {
-    margin: 17px 0;
-    font-size: 28px;
-    line-height: 28px;
-    color: #666;
+    // margin: 17px 0;
+    // font-size: 28px;
+    // line-height: 28px;
+    // color: #666;
+    margin: 0;
   }
 
   .subtitle {
