--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,8 +6,7 @@
 
 body {
   font-family: $sans-serif;
-  font-size: 16px;
-  line-height: 1.5em;
+  line-height: 1.6em;
   color: #333;
   background-color: $background-primary;
 }
@@ -23,24 +22,37 @@ hr {
   border-bottom: 1px solid #ffffff;
 }
 
+aside {
+  margin-left: 1em;
+  font-size: 0.8em;
+  line-height: 1.4em;
+  padding-left: 1em;
+  background-color: whitesmoke;
+  border-radius: 4px;
+  padding: 1em;
+}
+
 pre {
   line-height: 16px;
   font-size: 14px;
-  background-color: whitesmoke;
-  padding: 6px;
   word-wrap: normal;
   white-space: pre;
   overflow-x: auto;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 1em;
+  box-shadow: 0 0 15px 0px rgba(0,0,0,0.05) inset;
 }
 
 p code, ul code {
-  margin: 0 2px;
-  padding: 0px 5px;
-  border: 1px solid #ddd;
-  background-color: #f8f8f8;
-  border-radius: 3px;
-  font-family: Consolas, "Liberation Mono", Courier, monospace;
-  font-size: 12px;  
+  // margin: 0 2px;
+  // padding: 0px 5px;
+  // border: 1px solid #ddd;
+  // background-color: #f8f8f8;
+  // border-radius: 3px;
+  font-family: "Menlo", monospace;
+  font-size: 0.8em;
+  line-height: 1em;
 }
 
 ul, ol {
@@ -109,18 +121,23 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  font-size: 2.5em;
-  line-height: 1.333em;
+  font-size: 2.8em;
+  line-height: 1.1em;
+  font-family: $h1;
+  text-align: center;
 }
 
 h2 {
   font-size: 1.75em;
   line-height: 1.4em;
   margin-bottom: 0.375em;
+  font-size: 1.3em;
+  font-weight: bold;
 }
 
 h3 {
   font-size: 1.125em;
+  font-weight: bold;
 }
 
 h4 {
