--- a/_sass/modules/_article.scss
+++ b/_sass/modules/_article.scss
@@ -4,8 +4,36 @@ article {
   margin-right: auto;
   margin-bottom: 50px;
 
+  .back {
+    display: block;
+    float: left;
+    margin-top: 1em;
+
+    a:hover {
+      text-decoration: none;
+    }
+    i {
+      font-size: 0.9em;
+      padding-right: 0.3em;
+    }
+  }
+
+  .date {
+    float: right;
+  }
 
   h2 {
     margin-top: 5px;
+    border-top: 1px solid #eee;
+    padding-top: 1em;
+  }
+
+  h3 {
+    border-top: 1px solid #eee;
+    padding-top: 1em;
+  }
+
+  .byline {
+    text-align: center;
   }
 }
