--- a/_sass/tools/_mixins.scss
+++ b/_sass/tools/_mixins.scss
@@ -32,8 +32,17 @@
     @media (min-width: $desktop-breakpoint)  { @content; }
   }
   @else if $point == retina {
-  	@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+    @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
        only screen and (min--moz-device-pixel-ratio: 1.5),
        only screen and (min-device-pixel-ratio: 1.5) { @content; }
+  }
+}
+
+@mixin below($point) {
+  @if $point == desktop {
+    @media (max-width: $desktop-breakpoint - 1) { @content; }
+  }
+  @else if $point == tablet {
+    @media (max-width: $tablet-breakpoint - 1)  { @content; }
   }
 }
