--- a/_sass/tools/_settings.scss
+++ b/_sass/tools/_settings.scss
@@ -1,8 +1,10 @@
 /*
   Typography
 */
+@import url(http://fonts.googleapis.com/css?family=Oleo+Script);
 $sans-serif:        "Helvetica Neue", Helvetica, Arial, sans-serif;
 $serif:             "Georgia", Cambria, Times New Roman, Times, serif;
+$h1: 'Oleo Script', cursive;
 
 /*
   Colors
