--- a/_sass/modules/_writing.scss
+++ b/_sass/modules/_writing.scss
@@ -11,9 +11,9 @@
 
 
   ul {
+    margin-top: 0;
     // list-style-type: none;
-    // margin-left: 0;
-    // padding-left: 0;
+    // padding-left: 1.5em;
   }
 
   .content {
