--- a/_sass/modules/_blog.scss
+++ b/_sass/modules/_blog.scss
@@ -19,6 +19,11 @@
   }
 
   article {
+    .subtitle {
+      display: block;
+      margin-top: 0.7em;
+    }
+
     ul {
       list-style-type: disc;
       margin-left: 1em;
