--- a/_sass/tools/_settings.scss
+++ b/_sass/tools/_settings.scss
@@ -12,7 +12,7 @@ $h1: 'Oleo Script', cursive;
 $main-color: #2185C5;
 $off-white: #fafafa;
 
-$background-primary: "white";
+$background-primary: white;
 $background-alt: $off-white;
 
 $link-color: $main-color;
