--- a/css/style.css
+++ b/css/style.css
@@ -771,7 +771,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 1.6em;
   color: #333;
-  background-color: "white";
+  background-color: white;
 }
 
 /* line 14, ../_sass/_base.scss */
