--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,6 +9,7 @@ body {
   line-height: 1.6em;
   color: #333;
   background-color: $background-primary;
+  @include container(90%); 
 }
 
 small {
@@ -123,7 +124,7 @@ h1, h2, h3, h4, h5 {
 h1 {
   font-size: 2.8em;
   line-height: 1.1em;
-  font-family: $h1;
+  // font-family: $h1;
   text-align: center;
 }
 
